# fastapi_demo

./: .env.template  .gitignore  README.md  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml  initialize_env.sh
backend/: .flake8  .pre-commit-config.yaml  Dockerfile  alembic.ini  gunicorn_conf.py  mypy.ini  prestart.sh  pyproject.toml  requirements-dev.txt  start-reload.sh  start.sh  tox.ini
backend/alembic/: env.py
backend/alembic/versions/: 17e8aa9d283a_added_user_table.py  e49a039ef71e_test_revision1.py
backend/demo/: __init__.py  __main__.py  main.py  version.py
backend/demo/api/: __init__.py
backend/demo/api/v1/: __init__.py  route_login.py  route_users.py
backend/demo/core/: config.py  handlers.py  hashing.py  security.py
backend/demo/database/: __init__.py
backend/demo/database/models/: users_model.py
backend/demo/schemas/: __init__.py  users.py
backend/demo_backend/: __main__.py  main.py  models.py  version.py
backend/demo_backend/api/: __init__.py
backend/demo_backend/api/v1/routes/: route_celery.py  route_jobs.py  (+2 more)
backend/demo_backend/celery/: __init__.py
backend/demo_backend/core/: config.py  hashing.py  security.py  tasks.py
backend/demo_backend/database/: __init__.py  tasks.py
backend/demo_backend/database/models/: jobs.py  users.py
backend/demo_backend/database/repository/: jobs.py  login.py  users.py
backend/demo_backend/schemas/: celery_job.py  jobs.py  users.py
backend/stubs/re2/: __init__.pyi
backend/tests/: __init__.py  conftest.py  installed_test.py
backend/tests/api_v1/: conftest.py  login_test.py  users_test.py
backend/tests/db/: basic_connection_test.py  jobs_repo_test.py
backend/tests/test_routes/: celery_test.py  jobs_test.py  login_test.py  users_test.py
(+2 files in other folders)
